fix cropped map name

--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -15,6 +15,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  padding: .4rem 0; // without this padding, letters below the baseline (q,p,g..) would get cropped by the overflow.
 }
 
 #lobby {
